<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Ticket scanner</string>
  <string name="title_about">Ticket scanner v</string>

  <string name="status_starting">Starting</string>
  <string name="status_network_on">Connected</string>
  <string name="status_network_off">Not connected</string>
  <string name="status_no_data">, nothing to send</string>
  <string name="status_data_waiting">, data waiting for delivery</string>

  <string name="app_picker_name">Applications</string>
  
  <string name="button_back">Back</string>
  <string name="button_cancel">Cancel</string>
  <string name="button_ok">OK</string>
  <string name="button_backspace">back</string>
  <string name="button_start">Start</string>
  <string name="button_scan_slip">Scan ticket slip</string>
  <string name="button_startstop_start">Begin</string>
  <string name="button_startstop_stop">Complete</string>
  <string name="button_send_first">Scan</string>
  <string name="button_send">Send and proceed with next ticket</string>
  <string name="button_scan_again">Retry scan</string>
  <string name="button_manual">Type number</string>
  <string name="button_scan_lottery">LOTTERY\nsticker\nscan</string>
  <string name="button_continue_scan">Continue scan</string>
  <string name="button_done">Done</string>
  <string name="button_multi_stop">No more stickers</string>
  <string name="button_multi_next">Next sticker</string>
  <string name="button_check_update">Update</string>
  <string name="button_continue_anyway">Continue anyway</string>
  <string name="button_settings">Go to settings</string>
      
  <string name="button_0">0</string>
  <string name="button_1">1</string>
  <string name="button_2">2</string>
  <string name="button_3">3</string>
  <string name="button_4">4</string>
  <string name="button_5">5</string>
  <string name="button_6">6</string>
  <string name="button_7">7</string>
  <string name="button_8">8</string>
  <string name="button_9">9</string>
  
  <string name="label_rr_slip_number">Railroad slip number</string>
  <string name="label_lt_sticker_number">Lottery sticker number</string>
  <string name="label_lt_sticker_set">Lottery sticker list</string>
  <string name="label_personal_id">Personal ID</string>
  <string name="label_ticket_count">Ticket count</string>
      
  <string name="menu_about">About</string>
  <string name="menu_help">Help</string>
  <string name="menu_settings">Settings</string>
  
  <string name="msg_banner">Ticket Scanner</string>
  <string name="msg_about">The Android app based on the open source ZXing barcode project.</string>
  <string name="msg_enter_id">Enter your Id</string>
  <string name="msg_enter_code">Enter the code</string>
  <string name="msg_enter_rr">Enter railroad slip number</string>
  <string name="msg_enter_lt">Enter lottery sticker number</string>
  <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
  <string name="msg_default_status"></string>
  <string name="msg_default_time">Time</string>
  <string name="msg_default_type">Type</string>
  <string name="msg_scan_railroad_ticket">Place railroad ticket barcode under green line.</string>
  <string name="msg_scan_lottery_ticket">Place lottery code inside the viewfinder rectangle.</string>
  <string name="msg_railroad_number">Enter Railroad ticket number</string>
  <string name="msg_lottery_number">Enter Lottery number</string>
  <string name="msg_instruction">Please scan left bar-code of railroad ticket slip first, then scan lottery codes</string>
  <string name="msg_scan_failure1">Rail road ticket barcode</string>
  <string name="msg_scan_failure1a">Lottery ticket barcode</string>
  <string name="msg_scan_failure2">not recognized</string>
  <string name="msg_rr_scan_success_1">Scan barcode on lottery sticker</string>
  <string name="msg_rr_scan_success_2">Use lock to scan multiple stickers</string>
  <string name="msg_mistake_rr">Please, scan rail road ticket code</string>
  <string name="msg_mistake_lt">Please, scan lottery sticker</string>
  <string name="msg_same_numbers">The lottery sticker number identical to rail road ticket code</string>
  <string name="msg_duplicate_lt">Duplicate sticker number </string>
  <string name="msg_multi_mode">Multiple stickers mode</string>
  <string name="msg_unsupported_hardware">This hardware has not been tested yet</string>
  <string name="msg_no_sd_card">Memory card not found. Please insert Memory card to continue.</string>
  <string name="msg_sd_card_full">Memory card full. Please replace Memory card to continue.</string>
  <string name="msg_sdcard_almost_full">Memory card almost full. Please prepare to replace.</string>
  <string name="msg_non_market">Please, enable non-market applications</string>
  <string name="msg_usb_debug">Please, enable usb-debug</string>
      
  <string name="preferences_name">Settings</string>
  <string name="preferences_action_title">When a barcode is found</string>
  <string name="preferences_play_beep_title">Beep</string>
  <string name="preferences_vibrate_title">Vibrate</string>
  <string name="preferences_general_title">General settings</string>
  <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
  <string name="preferences_front_light_title">Use front light</string>
      
  <string name="numeric_dialog_short">Not enough digits</string>      
  <string name="numeric_dialog_invalid">Invalid number</string>
  
  <string name="downloader_title">TicketScanner</string>
  <string name="downloader_description">TicketScanner update</string>
  <string name="description_img">img</string>
  
</resources>