<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="4dip" >

    <TextView
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:text="" />
    
    <TextView
        android:id="@+id/label_valid"
        android:layout_below="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text=""
        android:textColor="#600000"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.octys.rzd.EditNumber
        android:id="@+id/number"
        android:layout_width="fill_parent"
        android:layout_below="@+id/label_valid"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:cursorVisible="false"
        android:maxLength="20"
        android:textSize="24dip" >

        <requestFocus />
    </com.octys.rzd.EditNumber>

    <TableLayout
        android:id="@+id/table1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/number">

        <TableRow android:layout_weight="1" >
            <Button android:id="@+id/n1" android:text="@string/button_1" style="@style/Button_keypad"/>
            <Button android:id="@+id/n2" android:text="@string/button_2" style="@style/Button_keypad"/>
            <Button android:id="@+id/n3" android:text="@string/button_3" style="@style/Button_keypad"/>
        </TableRow>
        <TableRow android:layout_weight="1" >
            <Button android:id="@+id/n4" android:text="@string/button_4" style="@style/Button_keypad"/>
            <Button android:id="@+id/n5" android:text="@string/button_5" style="@style/Button_keypad"/>
            <Button android:id="@+id/n6" android:text="@string/button_6" style="@style/Button_keypad"/>
        </TableRow>
        <TableRow android:layout_weight="1" >
            <Button android:id="@+id/n7" android:text="@string/button_7" style="@style/Button_keypad"/>
            <Button android:id="@+id/n8" android:text="@string/button_8" style="@style/Button_keypad"/>
            <Button android:id="@+id/n9" android:text="@string/button_9" style="@style/Button_keypad"/>
        </TableRow>
            
        <TableRow android:layout_weight="1" >
            <Button android:id="@+id/ok" android:text="@string/button_ok"               style="@style/Button_keypad"/>
            <Button android:id="@+id/n0" android:text="@string/button_0" 				style="@style/Button_keypad"/>
            <Button android:id="@+id/backspace" android:text="@string/button_backspace" style="@style/Button_keypad"
                android:textSize="20dip"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>