<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Layout3"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="4dip"
    android:background="@drawable/background_main">

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical">
	   	<ImageView
	        android:id="@+id/imageGreenCheck"
	        android:layout_weight="2"
	        android:layout_height="0dp"
	        android:layout_width="wrap_content"
	        android:layout_gravity="center_horizontal|center_vertical"
	        android:adjustViewBounds="true"
	        android:scaleType="centerCrop"
	        android:contentDescription="@string/description_img"
	        android:src="@drawable/galka" />
		<RelativeLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		     android:layout_weight="1"
		    android:orientation="vertical">
    	    <TextView
		        android:id="@+id/label_railroad_number"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:text="@string/label_rr_slip_number"
		        android:textColor="#000000"
		        android:textSize="12dp"/>
		    <TextView
		        android:id="@+id/rr_slip_number"
		        android:layout_weight="1"
		        android:layout_below="@+id/label_railroad_number"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="12345678901234"
		        android:textColor="#000000"
		        android:textSize="28dp"/>
	    </RelativeLayout>
		<RelativeLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		     android:layout_weight="1"
		    android:orientation="vertical">
    	    <TextView
		        android:id="@+id/label_lottery_number"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:text="@string/label_lt_sticker_number"
		        android:textColor="#000000"
		        android:textSize="12dp"/>
		    <TextView
		        android:id="@+id/lt_sticker_number"
		        android:layout_weight="1"
		        android:layout_below="@+id/label_lottery_number"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="12345678901234"
		        android:textColor="#000000"
		        android:textSize="28dp"/>
	    </RelativeLayout>
		<RelativeLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		     android:layout_weight="1"
		    android:orientation="vertical">
    	    <TextView
		        android:id="@+id/label_ticket_count"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:text="@string/label_ticket_count"
		        android:textColor="#000000"
		        android:textSize="12dp"/>
		    <TextView
		        android:id="@+id/ticket_count"
		        android:layout_weight="1"
		        android:layout_below="@+id/label_ticket_count"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="12"
		        android:textColor="#005000"
		        android:textSize="28dp"/>
	    </RelativeLayout>
		<Button
	        android:id="@+id/button_continue_scan"
	        android:layout_weight="1"
	        style="@style/Button"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/strelka_repeat"
	        android:paddingLeft="20dp"
			android:text="@string/button_continue_scan" />
	    <Button
	        android:id="@+id/button_done"
	        android:layout_weight="1"
	        style="@style/Button"
	        android:layout_alignParentBottom="false"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/galka_black"
	        android:paddingLeft="20dp"
			android:text="@string/button_done" />
	</LinearLayout>
</RelativeLayout>


