<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
	android:gravity="center_vertical|center_horizontal"
    android:background="@drawable/background_main">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
	android:gravity="center_vertical|center_horizontal">
    
    <TextView
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_weight="0.33"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/msg_unsupported_hardware"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        android:typeface="serif" />
    
    <ImageView
        android:id="@+id/image_cross"
        android:layout_weight="0.33"
        android:layout_height="1dp"
        android:layout_width="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:paddingLeft="16dip"
        android:paddingRight="16dip"
		android:contentDescription="@string/description_img"
		android:src="@drawable/krest" />


    <Button
        android:id="@+id/button_continue_anyway"
        style="@style/Button_big"
        android:layout_weight="0.33"
        android:layout_height="1dp"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal|center_vertical"
        android:paddingLeft="20dp"
        android:drawableLeft="@drawable/galka_black"
        android:text="@string/button_continue_anyway" />
    
</LinearLayout>
</RelativeLayout>
