<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background_main" >

    <TableLayout
        android:id="@+id/table1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/number" >

        <TableRow android:layout_weight="1" >
            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_img"
                android:gravity="center_horizontal|center_vertical"
                android:paddingLeft="16dip"
                android:paddingRight="16dip"
                android:src="@drawable/logo" />
        </TableRow>

        <TableRow android:layout_weight="1" >

            <TextView
                android:id="@+id/text_banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/msg_banner"
                android:textColor="#000000"
                android:textSize="32dp"
                android:textStyle="bold"
                android:typeface="serif" />
        </TableRow>

        <TableRow android:layout_weight="1" >

            <Button
                android:id="@+id/button_start"
                style="@style/Button_big"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:drawableLeft="@drawable/strelka"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/button_start" />

        </TableRow>
    </TableLayout>

</RelativeLayout>